--- a/index.html
+++ b/index.html
@@ -348,7 +348,7 @@ setInterval(createSnow, 200);
         const vids = document.querySelectorAll('.gift-video');
 
         function checkPass() {
-            if (document.getElementById('passInput').value === "2026") {
+            if (document.getElementById('passInput').value === "2682024") {
                 bgMusic.play().catch(() => console.log("Music play pending user interaction"));
                 document.getElementById('loginScreen').classList.remove('active');
                 document.getElementById('mainContent').classList.add('active');
