--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
                 <div class="video-wrapper"><video class="gift-video" controls><source src="https://github.com/sfyanmhmd991-cpu/bk20/blob/main/vid1.mp4" type="video/mp4"></video></div>
             </div>
             <div class="media-item">
-                <div class="video-wrapper"><video class="gift-video" controls><source src="vid2.mp4" type="video/mp4"></video></div>
+                <div class="video-wrapper"><video class="gift-video" controls><source src="https://github.com/sfyanmhmd991-cpu/bk20/blob/main/vid2.mp4" type="video/mp4"></video></div>
             </div>
             <div class="media-item">
                 <div class="video-wrapper"><video class="gift-video" controls><source src="vid3.mp4" type="video/mp4"></video></div>
@@ -401,4 +401,5 @@ setInterval(createSnow, 200);
     </script>
 </body>
 </html>
+
 
