--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
             <h1 class="section-title">🎥 فيديوهاتنا</h1>
             <div class="media-item">
-                <div class="video-wrapper"><video class="gift-video" controls><source src="https://github.com/sfyanmhmd991-cpu/bk20/blob/main/vid1.mp4" type="video/mp4"></video></div>
+                <div class="video-wrapper"><video class="gift-video" controls><source src="https://streamable.com/2eh7ki?src=player-page-share" type="video/mp4"></video></div>
             </div>
             <div class="media-item">
                 <div class="video-wrapper"><video class="gift-video" controls><source src="https://github.com/sfyanmhmd991-cpu/bk20/blob/main/vid2.mp4" type="video/mp4"></video></div>
@@ -401,6 +401,7 @@ setInterval(createSnow, 200);
     </script>
 </body>
 </html>
+
 
 
 
