--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 
             <h1 class="section-title">🎥 فيديوهاتنا</h1>
             <div class="media-item">
-                <div class="video-wrapper"><video class="gift-video" controls><source src="https://streamable.com/2eh7ki?src=player-page-share" type="video/mp4"></video></div>
+                <div class="video-wrapper"><video class="gift-video" controls><source src="<div style="position:relative; width:100%; height:0px; padding-bottom:177.778%"><iframe allow="fullscreen" allowfullscreen height="100%" src="https://streamable.com/e/2eh7ki?" width="100%" style="border:none; width:100%; height:100%; position:absolute; left:0px; top:0px; overflow:hidden;"></iframe></div>" type="video/mp4"></video></div>
             </div>
             <div class="media-item">
                 <div class="video-wrapper"><video class="gift-video" controls><source src="https://github.com/sfyanmhmd991-cpu/bk20/blob/main/vid2.mp4" type="video/mp4"></video></div>
@@ -401,6 +401,7 @@ setInterval(createSnow, 200);
     </script>
 </body>
 </html>
+
 
 
 
